Replacing 'OpenMoko' with 'Openmoko'

--- a/Wishlist%2FBuiltInScriptingLanguage.mw
+++ b/Wishlist%2FBuiltInScriptingLanguage.mw
@@ -91,7 +91,7 @@ Fill in and add to this if possible.
 
 ''It's true that you have the ability to add anything to the phone.''
 
-''There's another important consideration to remember: OpenMoko is a platform also; an inherent aspect of such a platform is that it always come shipped with X standard api's available for developers. This is why FIC had to select a group of components: gcc, glibc, xorg/kdrive, dbus and gtk, for instance.''
+''There's another important consideration to remember: Openmoko is a platform also; an inherent aspect of such a platform is that it always come shipped with X standard api's available for developers. This is why FIC had to select a group of components: gcc, glibc, xorg/kdrive, dbus and gtk, for instance.''
 
 ''They may decide that a scripting language would also be a necessary or beneficial feature to include in the base/standard platform''
 
@@ -99,12 +99,12 @@ Fill in and add to this if possible.
 
 ''Choice is good.''
 
-''And so is having a known/standard/default/static api and platform to build from; when I begin writting commercial and/or free software for the OpenMoko, I will design my software according the existing OpenMoko specs, and thereby circumvent the necessity of having to verify that my customers/end users have first installed the necessary scripting language, which would additionally circumvent the probability that your phone will end up with every scripting language known to man.''
+''And so is having a known/standard/default/static api and platform to build from; when I begin writting commercial and/or free software for the Openmoko, I will design my software according the existing Openmoko specs, and thereby circumvent the necessity of having to verify that my customers/end users have first installed the necessary scripting language, which would additionally circumvent the probability that your phone will end up with every scripting language known to man.''
 
 
 ''> So having lua on my system would be more or less pointless as I don't use it myself.''
 
-''Less than one meg of space would be potentially wasted, true enough in your case. Know that there is probably plenty of other software on the OpenMoko platform that you, yourself, will not be using.''
+''Less than one meg of space would be potentially wasted, true enough in your case. Know that there is probably plenty of other software on the Openmoko platform that you, yourself, will not be using.''
 
 ''Also realize that though _you_ may not be directly using this hypothetical scripting language, it is more than likely that one or more of the standard apps that ship with the phone will be using it, and that other 3rd party software that you may or may not install may also be using it.''
 
@@ -123,24 +123,24 @@ target. ''
 
 ''That's all well and good when everyone has SPACE for every scripting  language known to man.  But use 10mb here, 10mb there for scripting languages, and suddenly there's nothing left of my 64mb of flash. ''
 
-''I'm all for allowing people to use whatever scripting language they want.  But I'd like the peace of mind of knowing I can write a scripted app that will run on every OpenMoko phone out there, even if they have no memory expansion card.  I don't want the situation where the poor user has to unload someone else's app and scripting environment in order to use mine, or vice versa. ''
+''I'm all for allowing people to use whatever scripting language they want.  But I'd like the peace of mind of knowing I can write a scripted app that will run on every Openmoko phone out there, even if they have no memory expansion card.  I don't want the situation where the poor user has to unload someone else's app and scripting environment in order to use mine, or vice versa. ''
 
 Bryan Larsen adds:
 
 ''It'll be faster for me to develop my apps in Ruby-GTK2 and then port to C once the application stabilizes, since so much of the actual work involves playing with and discarding various ideas.  Why should I have to go through the totally unnecessary step of transliterating my code into C just so it can be used by mainstream users?  I don't really care if Ruby or Python or even Javascript is chosen, I just want something for rapid development that I can ship without translating!''
 
-For all these reasons, a choice should be made, and it should be made quickly.  A scripting language should be chosen and "blessed"; actual implementation on OpenMoko is a much lower priority as most people will likely be (or should be) prototyping their applications on a PC anyways.
+For all these reasons, a choice should be made, and it should be made quickly.  A scripting language should be chosen and "blessed"; actual implementation on Openmoko is a much lower priority as most people will likely be (or should be) prototyping their applications on a PC anyways.
 
 == Factors to Consider ==
 
 # '''How popular is it?''' The fewer people that need to learn a new language, the less whining we'll get on the list when it's chosen.
-# '''How big is the run time environment?'''  This is perhaps the most important question, since we are trying to fit into a very small fraction of the 64MB of space available in the OpenMoko ROM.  We only need the run time environment; it is expected that developers will have a PC or microSD card to compile to the intermediate form used by the scripting language.  It's also presumed that a stripped down, precompiled standard library will be included.
+# '''How big is the run time environment?'''  This is perhaps the most important question, since we are trying to fit into a very small fraction of the 64MB of space available in the Openmoko ROM.  We only need the run time environment; it is expected that developers will have a PC or microSD card to compile to the intermediate form used by the scripting language.  It's also presumed that a stripped down, precompiled standard library will be included.
 # '''Is it easy to learn?'''  Assuming that the user has already learned some Algol influenced language, (ie pretty much every language in widespread current use except for Lisp and FORTRAN), how easy is it to learn?
 # '''How advanced is it?'''  We want to include a language that people will use.  Specifically I'm going to look for "closures" and "meta-programming" as a measure of how "advanced" the language is.  These are very arbitrary choices, but they are something I've found useful.  If you have any other pet measures, let me know!
-# '''Does it have bindings to GTK2, OpenMoko-libs and D-BUS?'''  These three things will be required to write applications that look and feel like OpenMoko apps, as well as interact well with the built-in applications.
+# '''Does it have bindings to GTK2, Openmoko-libs and D-BUS?'''  These three things will be required to write applications that look and feel like Openmoko apps, as well as interact well with the built-in applications.
 # '''How does it perform?'''  Performance is usually not a major concern for a scripting language, but due to the limited horsepower available on phones, it is a concern.
-# '''Is it embeddable?'''  Traditionally in the Unix world, applications were small tools bound together by scripts and pipes.  Traditionally in the Windows world, applications were huge monolothic beasts that were scriptable using a built-in scripting language such as Visual Basic for Applications.  This model is also used in the Unix world, Emacs being the classic example.  A hybrid model has emerged and become popular in modern Unix GUI's such as OSX, Gnome and KDE: applications expose a scripting friendly API via D-BUS, CORBA or Applescript so that external scripts can appear to act as internal scripts.  If the scripting language chosen is easily embeddable, all three models become available on OpenMoko.  It's expected that the third model will be the most popular, but the second model may have size/overhead advantages.
-# '''What major applications of interest''' are available in the language and would be useful on OpenMoko?
+# '''Is it embeddable?'''  Traditionally in the Unix world, applications were small tools bound together by scripts and pipes.  Traditionally in the Windows world, applications were huge monolothic beasts that were scriptable using a built-in scripting language such as Visual Basic for Applications.  This model is also used in the Unix world, Emacs being the classic example.  A hybrid model has emerged and become popular in modern Unix GUI's such as OSX, Gnome and KDE: applications expose a scripting friendly API via D-BUS, CORBA or Applescript so that external scripts can appear to act as internal scripts.  If the scripting language chosen is easily embeddable, all three models become available on Openmoko.  It's expected that the third model will be the most popular, but the second model may have size/overhead advantages.
+# '''What major applications of interest''' are available in the language and would be useful on Openmoko?
 
 == The Languages (already included) ==
 
@@ -148,7 +148,7 @@ For all these reasons, a choice should be made, and it should be made quickly.  
 
 # already included, useful for most cases - [http://99-bottles-of-beer.net/language-bash-98.html example]
 # Shell is a very popular scripting language.
-# There will be a shell of some form available on OpenMoko, therefore it is "free".
+# There will be a shell of some form available on Openmoko, therefore it is "free".
 # Shell is idiosyncratic, but all Unix developers know it in at least a very limited degree.
 # Shell is a full language, but can hardly be compared to languages designed monolithically.  :)
 # [[D-Bus#Command_line]] is usable from the command line.  GTK2 may be used via [http://www.gtk-server.org/index.html gtk-server].
@@ -194,11 +194,11 @@ For all these reasons, a choice should be made, and it should be made quickly.  
 # It has closures, although they were a late addition to the language.  Metaprogramming is very difficult.  
 # Bindings are available for GTK2 and [[D-Bus#Python]].  GTK bindings are part of the Gnome project.
 # [[Manually using Bluetooth]] has parts in Python
-# Performance is good. Psyco can make it extremely good, but that is unlikely to be available to OpenMoko. The PyPy JIT is on it's way.
+# Performance is good. Psyco can make it extremely good, but that is unlikely to be available to Openmoko. The PyPy JIT is on it's way.
 # By using '''[http://www.cosc.canterbury.ac.nz/greg.ewing/python/Pyrex/ Pyrex]'''/[http://pyinline.sourceforge.net/ PyInline]/[http://www.swig.org/ SWIG], hungry algorithms can get C-like performance. Nice benchmarks [http://scipy.org/PerformancePython here]. RPython (PyPy) already is somewhat usable and [http://mark.dufour.googlepages.com/ Shed Skin] looks promising.
 # Python can be embedded, although not trivially. [http://www.tucs.fi/magazin/output.php?ID=2000.N2.LilDeEmPy DePython] (footprint <200k) is proof of concept, but currently unmaintained. Tinypy may become usable.
 # [http://opensource.nokia.com/projects/pythonfors60/ Example implementation] for Symbian. The runtime environment is under 1MB (i think ~700KB), with a footprint of about 150KB. There are well working programs for it like [http://p7.hostingprod.com/@s60freeware.com/s60blog/2006/06/easyedit_a_text_editor_for_the.html EasyEdit]
-# OLPC uses Python heavily and may produce applications suitable for porting to OpenMoko
+# OLPC uses Python heavily and may produce applications suitable for porting to Openmoko
 # Python is the only language besides C / C++ mentioned in GNOME Mobile & Embedded Initiative Mobile Platform
 # Python has been successfully used to create well-working and fast programs for the Nokia 770/800 devices, such as [http://konttoristhoughts.blogspot.com/2007/03/uk-media-player-is-nearing-first-public.html this].
 # Jython would make it almost 'free', but it's slower and [http://www.jython.org/docs/differences.html not identical] to CPython.
@@ -228,11 +228,11 @@ For all these reasons, a choice should be made, and it should be made quickly.  
 # Lisp syntax is very simple, and hated by many.  :)
 # Modern lisp variants are more "powerful" than every other language listed here.
 # GTK2 and D-BUS bindings are available
-# [http://galinha.ucpel.tche.br/platforms#openmoko Chicken Scheme interpreter] and runtime library packaged for OpenMoko
+# [http://galinha.ucpel.tche.br/platforms#openmoko Chicken Scheme interpreter] and runtime library packaged for Openmoko
 
 === Java ===
 
-# Not a scripting language, but Java does offer garbage collection and a few features that make development slightly faster than C.  A J2ME JVM is ubiquitous on competing cell phones so is likely to be included in OpenMoko for purely competitive reasons. (But if we're all lucky, a clear-minded concensus will prevail in everyone's understanding that Java just doesn't belong on an embedded device.)
+# Not a scripting language, but Java does offer garbage collection and a few features that make development slightly faster than C.  A J2ME JVM is ubiquitous on competing cell phones so is likely to be included in Openmoko for purely competitive reasons. (But if we're all lucky, a clear-minded concensus will prevail in everyone's understanding that Java just doesn't belong on an embedded device.)
 # A full J2ME implementation takes about 2 Megabytes of space.  [http://developers.sun.com/techtopics/mobility/getstart/articles/survey/ (reading in between the lines here.  I could be very wrong)].  However since it's likely to be included in the phone for other reasons it can be considered "free". Also, there's the very small [http://jamvm.sourceforge.net/ JamVM] as an alternative.
 # Java is very C-like.
 # Java is not a scripting language and doesn't support advanced scripting language features. So why is it in this list? 
@@ -254,7 +254,7 @@ For all these reasons, a choice should be made, and it should be made quickly.  
 
 # Not a scripting language, but offers garbage collection and other nice features.
 # Already used in a similar setup on Nokia 770/800.
-# Nicely cross-platform; same binary could be run on OpenMoko, Nokia 770/800, Linux, Windows (see [http://www.mdk.org.pl/articles/2007/01/28/clone-wars here]).
+# Nicely cross-platform; same binary could be run on Openmoko, Nokia 770/800, Linux, Windows (see [http://www.mdk.org.pl/articles/2007/01/28/clone-wars here]).
 # Has anyone got a good quote on runtime size? (One package was 1.7M for runtime, 1.3M for GTK#, and a whopping 22M for the full classlib. (not all classes are needed))
 # With IKVM, it can run many java apps.
 # IronPython and IronRuby would be great boons.
