Replacing 'OpenMoko' with 'Openmoko'

--- a/Wishlist%2FGames.mw
+++ b/Wishlist%2FGames.mw
@@ -1,8 +1,8 @@
 {{Wishlist}}
 
-=== Games on OpenMoko ===
+=== Games on Openmoko ===
 
-This is the page to centralize the suggestions for creating games on the OpenMoko device.
+This is the page to centralize the suggestions for creating games on the Openmoko device.
 
 ===== Existing game concepts that could be realized =====
 * [http://www.kloonigames.com/blog/general/crayon-physics-deluxe-on-a-tablet-pc/ crayon physics deluxe] and [http://numptyphysics.garage.maemo.org/ Numpty Physics] You play with crayons and physics. The goal of the game is to move the red ball so that it collects the stars. You can cause the red ball to move by drawing physical objects.
@@ -36,12 +36,12 @@ This is the page to centralize the suggestions for creating games on the OpenMok
 * [http://en.wikipedia.org/wiki/Heroes_of_Might_and_Magic Heroes of Might and Magic] maybe can be port this [http://www.pocketheroes.net/ Pocket Heroes] for PocketPC
 * [http://redshift.hu/ Legacy] (and successor The Quest) - Classic first person turn based RPG. Movement and menus can completely be controlled with the touchscreen.
 * [http://www.ufoot.org/liquidwar Liquid War] Liquid War is a unique multiplayer wargame.
-* [http://www.mame.net/ MAME] - Multiple Arcade Machine Emulator.  This versatile emulator turns a given platform into a powerful gaming system.  It has been ported to WinCE and many UNIX flavors as well.  It would be wonderul to have this on the OpenMoko. '''xmame is in openembedded'''
+* [http://www.mame.net/ MAME] - Multiple Arcade Machine Emulator.  This versatile emulator turns a given platform into a powerful gaming system.  It has been ported to WinCE and many UNIX flavors as well.  It would be wonderul to have this on the Openmoko. '''xmame is in openembedded'''
 * [http://www.mess.org/ MESS] - Multiple Emulator Super System. To emulate old computers like TI 99/4A, C64, ...
 * Nethack, you could move just touching the direction you want to go.
 * [http://icculus.org/neverball/ Neverball] - Move-ball-in-a-maze game, could be great with the accelerometers.
 * Nintendo (DS) Emulator (SNES, NES)
-* [http://www.openttd.com Open Transport Tycoon Deluxe]. Very possible, in fact the author of the Palm & GP2X ports of the game is already interested in OpenMoko. '''in openembedded'''
+* [http://www.openttd.com Open Transport Tycoon Deluxe]. Very possible, in fact the author of the Palm & GP2X ports of the game is already interested in Openmoko. '''in openembedded'''
 * [http://treacle.hewwo.com/jazz/oj/ OpenJazz] Jazz Jackrabbit clone, needs original data. Would need some external controller or [http://wiki.openmoko.org/wiki/Hardware:Neo1973:Alternate_Cases:Digital_gaming that] alternate case
 * Pipe Dreams
 * [http://www.clickgamer.com/moreinfo.htm?pid=4188&section=PALM Plazmoids!] - A space game with screen-size levels. Move your ship around by touching where it should go. Collect the plazmoids (asteroids) by catching them in your elastic tractor beam (lots of simple physics again), shoot enemies with a button or double tap. need to find a similar game with the sources...because porting a game without access to its sources is nearly impossible
@@ -56,7 +56,7 @@ This is the page to centralize the suggestions for creating games on the OpenMok
 * [http://www.wesnoth.org/ Battle for Wesnoth] The turn-based games on Linux. Active development, nice community, 100% addiction factor.There is also a [http://www.wesnoth.org/wiki/WesnothOnLinuxPDAs port on linux pda] that we could use. '''in openembedded,but does not compile''', see [https://mail.gna.org/public/wesnoth-bugs/2007-11/msg00361.html but someone had it running on the openmoko]
 * [http://www.wormux.org/wiki/en/index.php wormux] (it works without 3d acceleration) the game is playable in 640x480 even if the icon play and quit of the menu aren't displayed entierely(but we can click on them)
 
-===== General ideas about games on OpenMoko =====
+===== General ideas about games on Openmoko =====
 * A proper OpenGL ES library (preferably SDL) for the SMedia chip.
 * An easy network library for Bluetooth and/or GPRS connectivity.
 * Every turn-based game should be possible with on screen buttons. 
@@ -64,7 +64,7 @@ This is the page to centralize the suggestions for creating games on the OpenMok
 * The finger getting into the way of seeing what's going on is a problem. Most games would probably need a stylus. Games with first person aiming can be controlled with a thumb in one corner of the screen, however you'd probably need one of them thumbstraps they make for the DS so that your thumb glides over the screen with ease.
 * GPS can be used for location based games. An example is [http://codeninja.de/tron/ Tron]. Links to location-based/Alternate Reality games in these [http://del.icio.us/tallpaul/games+street del.icio.us pages]
 * Bluetooth controllers should be supported. I am especially thinking about the Nintendo Wii remote.
-* Virtually Real Games; the OpenMoko, with it's network connectivity and loads of basic features, could be used to invent/encourage a new(ish) style of game that mixes reality and tech. A basic version would be urban tag; you get close to someone and the buzzer beeps faster, say. There's so many more creative possibilities though.
+* Virtually Real Games; the Openmoko, with it's network connectivity and loads of basic features, could be used to invent/encourage a new(ish) style of game that mixes reality and tech. A basic version would be urban tag; you get close to someone and the buzzer beeps faster, say. There's so many more creative possibilities though.
 
 What is not possible without magic tricks / an external controller*:
 * Classic first person shooters, action adventures, jump 'n' runs
