Replacing 'OpenMoko' with 'Openmoko'

--- a/Wishlist%2FLiveUSB_distro.mw
+++ b/Wishlist%2FLiveUSB_distro.mw
@@ -12,7 +12,7 @@ YES, there are tons of liveCDs out there, but CDs/DVDs:
 * don't update or save settings/personal data without a supplementary USB device
 
 YES, there are LiveUSB distros but:
-* a Neo/OpenMoko device IS sort of an USB stick; one object is better than two
+* a Neo/Openmoko device IS sort of an USB stick; one object is better than two
 * you may carry my cellphone everywhere, what about usb sticks or cds ?
 
 The biggest argument against these ones is that you'd have to carry an USB cable with you... But it's a standard one, which is good news :) An integrated zippable plug could be an interesting add-on...
