Replacing 'OpenMoko' with 'Openmoko'

--- a/Wishlist%2FLocation_based_reminders.mw
+++ b/Wishlist%2FLocation_based_reminders.mw
@@ -23,7 +23,7 @@ This feature may be related (and integrated with) [[Wishlist:context_based_to-do
 * Find possible online repositories of location based information which could be integrated with this (i.e. for tourism info) ''- take a look at GeoClue, I think they've done that.''
 
 == Existing Technologies ==
-It would be worth checking out existing technologies to see what has/has not worked, and if the OpenMoko LBS-Reminders could be incorporated into these:
+It would be worth checking out existing technologies to see what has/has not worked, and if the Openmoko LBS-Reminders could be incorporated into these:
 
 * [http://www.flagr.com/ Flagr]
 * [http://socialight.com/ Socialight]
