Replacing 'OpenMoko' with 'Openmoko'

--- a/Wishlist%2FNeo1973_P0_Review.mw
+++ b/Wishlist%2FNeo1973_P0_Review.mw
@@ -15,7 +15,7 @@ Found on IRC, pictures by:
 *Rod Whitby  [http://www.flickr.com/photos/rwhitby/sets/72157594574977123/ has posted pictures of his Neo1973 test rig]
 *Hrw [http://flickr.com/photos/hrwandil/413643600/ Size comparison between nokia 6210, neo1973, SE k750i]
 *alphaone [http://sicherheitsschwankung.de/gallery/v/openmoko/ comparison of several phones running openmoko]
-*an overview in the flickr OpenMoko group [http://www.flickr.com/groups/openmoko/pool/]
+*an overview in the flickr Openmoko group [http://www.flickr.com/groups/openmoko/pool/]
 
 * picture of the inside of the front and back cases, with a ruler for scale, also pcb back and front with ruler, to make it easier for people considering building hardware modifications.
 
