--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -78,11 +78,11 @@ Premendo il bottone Power si uscirà dall'applicazione corrente.
 
 Tenendo premuto il bottone Power invece apparirà un menù che vi permetterà di accendere e spegnere il GSP, WIFI, GSM, l'antenna Bluetooth, e anche spegnere il Neo Freerunner.
 
-====Aux====
+==== Aux ====
 Premendo per un secondo il bottone Aux apparirà un menù che vi permetterà di:
 * Attivare lo schermo intero: per nascondere o mostrare la barra del titolo
 * Cambio di orientamento: ruota il contenuto dello schermo per la visualizzazione verticale o orizzontale
-* Screenshot: parte un'applicazione che permette di catturare e salvare un'immagine del contanuto dello schermo
+* Screenshot: parte un'applicazione che permette di catturare e salvare un'immagine del contenuto dello schermo
 
 === Sbloccare lo Schermo ===
 Quando lo schermo è bloccato, vedrai una grafica verde in stile Matrix con il simbolo di Openmoko nel centro della parte bassa dello schermo, assieme al simbolo di ''bloccato'' e ''sbloccato''. Se si trascina il simbolo di Openmoko fino alla cima dello schermo, verso il simbolo di ''sbloccato'', si sbloccherà lo schermo.
