Replacing 'OpenMoko' with 'Openmoko'

--- a/Wishlist%2FSoftware:GPS_proxy.mw
+++ b/Wishlist%2FSoftware:GPS_proxy.mw
@@ -43,7 +43,7 @@ If you can connect but there is now data:
 
  - check paring 
 
-In a thew weeks time I should get my new Forerunner, so I will try to move this idea to OpenMoko platform.
+In a thew weeks time I should get my new Forerunner, so I will try to move this idea to Openmoko platform.
 
 == Freerunner as GPS bluetooth device==
 This is described here: http://wiki.openmoko.org/wiki/GPS#GTA02
