Replacing 'OpenMoko' with 'Openmoko'

--- a/Wishlist%2FWikipedia_Mirror.mw
+++ b/Wishlist%2FWikipedia_Mirror.mw
@@ -13,7 +13,7 @@ On the compression front, lzma would seem to be the way to go.  Clearly the inpu
 
 To save space, we could provide smaller sections of the main Wikipedia (eg Music, Science, Literature) and download anything else on demand. It needs to be clear what's local and remote, however, as data charges can be expensive.
 
-From the other side, we could simply count on 8 Gb Micro SD card. Such card could store not just the article texts but maybe even images, if they are resized in advance to the small size, suitable for OpenMoko screen.
+From the other side, we could simply count on 8 Gb Micro SD card. Such card could store not just the article texts but maybe even images, if they are resized in advance to the small size, suitable for Openmoko screen.
 
 == Integration ==
 It would be interesting to integrate Wikipedia with the GPS device, allowing a query about the articles, describing objects that are located nearby. There are many articles about cities and other objects with known locations in Wikipedia, and some uniform coordinate representation system seems also present.
@@ -46,4 +46,4 @@ If I compress everything with bzip2 it shrinks to 19% of it's former size but th
 
 Conclusion: our only hope is to hope for SDHC support. I verified that the (second largest) german wiki will fit on a 2GB non-SDHC SD-Card with every file compressed separately. With my optimizations the english wikipedia will need 2.8GB so we need 4GB SDHC media for that.
 
-On the [[Booting_from_SD]] page there seems to be a way to make the OpenMoko use SDHC cards. Seems like the kernel supports it already so if uboot loads the kernel from NAND using a SDHC card will work. The way of archieving this is still ugly (console work involved) - but if it does work it seems to be doable for the time.
+On the [[Booting_from_SD]] page there seems to be a way to make the Openmoko use SDHC cards. Seems like the kernel supports it already so if uboot loads the kernel from NAND using a SDHC card will work. The way of archieving this is still ugly (console work involved) - but if it does work it seems to be doable for the time.
