--- a/Wishlist_-_Hardware_-_Novel_Devices.mw
+++ b/Wishlist_-_Hardware_-_Novel_Devices.mw
@@ -3,19 +3,19 @@ This page details hardware some would like in future [[Openmoko]] devices that a
 === Hard Drive ===
 Providing a hard drive, will allow storing music, movies, etc. Add USB storage device capability to use the device as an external hard drive.
 
-=== OpenMoko-branded modem card ===
+=== Openmoko-branded modem card ===
 
 A 3G modem card for use with other computing hardware, in particular PCs. Probably an internal expansion card such as an ExpressCard or Compact Flash card, with an alternative external (USB) unit for computers without internal slots. (In fact, a PCI-factor internal card for desktop computers might be reasonable too; see below.)
 
-There are already CardBus and external USB 3G modems available. In hardware terms, OpenMoko's modem could well be a simple rebranding of one of these existing products. But, at least in some areas, the 3G modem products available to end-users tend to be tied to a particular telco and bundled with that telco's software. They also have a mysterious tendency not to actually allow voice calls over the modem, even when the modem hardware appears to be quite capable of it. An OpenMoko modem that simply provided open drivers, no lock to a particular telco, good support for various operating systems, and simple support for voice and video calls over the modem, all out of the box, would already have some fairly unique selling points. (Since video conferencing is now taking off on personal computers, hardware that allows your desktop computer to make video calls to 3G mobile phones might well have a market, which is one reason why a PCI-factor card might not be so crazy.)
+There are already CardBus and external USB 3G modems available. In hardware terms, Openmoko's modem could well be a simple rebranding of one of these existing products. But, at least in some areas, the 3G modem products available to end-users tend to be tied to a particular telco and bundled with that telco's software. They also have a mysterious tendency not to actually allow voice calls over the modem, even when the modem hardware appears to be quite capable of it. An Openmoko modem that simply provided open drivers, no lock to a particular telco, good support for various operating systems, and simple support for voice and video calls over the modem, all out of the box, would already have some fairly unique selling points. (Since video conferencing is now taking off on personal computers, hardware that allows your desktop computer to make video calls to 3G mobile phones might well have a market, which is one reason why a PCI-factor card might not be so crazy.)
 
-But more than that, any software or services that OpenMoko develops to overcome the tricky problems of juggling and integrating different Internet and phone connections and different email, IM, VoIP and telephone-number identities on Internet-enabled phones would be available to users of the OpenMoko modem too. That would be a powerful selling point for the modem if and when OpenMoko has compelling solutions to these problems. In fact, the increased integration with PCs would make all OpenMoko devices more attractive. ("Whenever I'm logged in to my laptop all my calls go there, even when I'm not in range of WiFi.")
+But more than that, any software or services that Openmoko develops to overcome the tricky problems of juggling and integrating different Internet and phone connections and different email, IM, VoIP and telephone-number identities on Internet-enabled phones would be available to users of the Openmoko modem too. That would be a powerful selling point for the modem if and when Openmoko has compelling solutions to these problems. In fact, the increased integration with PCs would make all Openmoko devices more attractive. ("Whenever I'm logged in to my laptop all my calls go there, even when I'm not in range of WiFi.")
 
 Since [[FIC]] already has well-established relationships in the PC world, it could presumably make good use of those connections in selling the modems.
 
-* Obviously the OpenMoko modem faces much the same problems with getting reasonably open access to 3G hardware that are delaying 3G for the [[Neo1973]] series 
+* Obviously the Openmoko modem faces much the same problems with getting reasonably open access to 3G hardware that are delaying 3G for the [[Neo1973]] series 
 
-* Naturally a 3G Neo1973 or other OpenMoko phone would (or should) be able to provide many of the same advantages when acting as a modem for a PC. But there will still be a place for dedicated modems, if only because yoking a full mobile phone to your computer isn't always the best solution 
+* Naturally a 3G Neo1973 or other Openmoko phone would (or should) be able to provide many of the same advantages when acting as a modem for a PC. But there will still be a place for dedicated modems, if only because yoking a full mobile phone to your computer isn't always the best solution 
 
 * Just like full phones, modems would benefit from support for multiple SIMs (see [[Wish_List_-_Hardware#Ability_to_use_multiple_SIMs.2Fnetworks]]) if they're going to be used for (non-VoIP) voice
 
@@ -135,7 +135,7 @@ The current shape is great and many people love it (and I myself plan on getting
 ===Dump the '''''egg-shaped''''' case design and go '''''rectangular''''' for more screen space===
 *I'm all for devices that look great and have great features - aside from that I really like the current design. Thus I'd like to comment that the design change request is probably not the majority's opinion. [[User:Abraxa|Abraxa]] 00:00, 18 February 2007 (CET)
 
-There will be many OpenMoko devices, of different designs. --[[User:Speedevil|Speedevil]] 06:19, 28 February 2007 (CET)
+There will be many Openmoko devices, of different designs. --[[User:Speedevil|Speedevil]] 06:19, 28 February 2007 (CET)
 
 
 ===Clamshell===
@@ -150,9 +150,9 @@ Alcohol sensor adjacent to microphone.  It doesn't have to be accurate, just has
 
 I think those who drive cars might profit from this feature too. --[[User:Cedel|cedel]] 16:02, 20 February 2007 (CET)
 
-:Although this is a good idea, you have to be very careful about liability here. If it gives a false positive (i.e. you're not over the limit), and you have an accident, the OpenMoko team might be liable.
+:Although this is a good idea, you have to be very careful about liability here. If it gives a false positive (i.e. you're not over the limit), and you have an accident, the Openmoko team might be liable.
 
-::I guess the good alcohol sensor is very expensive, cheap very often give false outcome. However, they more often produce negative (no alcohol) while there is. And there's still the thing about guilt OpenMoko team would bear. --[[User:Tolein|tolein]] 18:01, 1 October 2007 (GMT+1)
+::I guess the good alcohol sensor is very expensive, cheap very often give false outcome. However, they more often produce negative (no alcohol) while there is. And there's still the thing about guilt Openmoko team would bear. --[[User:Tolein|tolein]] 18:01, 1 October 2007 (GMT+1)
 
 ===Bottle opener===
 * including a bottle opener is very hard, but could be useful.
