Replacing 'OpenMoko' with 'Openmoko'

--- a/Zedlock.mw
+++ b/Zedlock.mw
@@ -46,7 +46,7 @@ After the featureset solidifies a bit more, I will rewrite it in C (which I'm mu
 
 '''3)''' Eventually it will get a battery/charging state icon, GSM signal strength bars, and a ringer volume indicator, so you can see those things while the screen remains locked.  I don't want to make the interface too cluttered, but those items seem essential.
 
-'''4)''' Ideally this will slip right into the OpenMoko power management scheme.  Preferably neod and/or the dialer will *lock* the screen and require an unlock program (such as zedlock) in the following circumstances:
+'''4)''' Ideally this will slip right into the Openmoko power management scheme.  Preferably neod and/or the dialer will *lock* the screen and require an unlock program (such as zedlock) in the following circumstances:
 
   * immediately after an incoming call is answered
     (to prevent touchscreen input from the user's face or ear)
