--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -84,6 +84,9 @@ Premendo per un secondo il bottone Aux apparirà un menù che vi permetterà di:
 * Cambio di orientamento: ruota il contenuto dello schermo per la visualizzazione verticale o orizzontale
 * Screenshot: parte un'applicazione che permette di catturare e salvare un'immagine del contenuto dello schermo
 
+=== Password ===
+
+
 === Sbloccare lo Schermo ===
 Quando lo schermo è bloccato, vedrai una grafica verde in stile Matrix con il simbolo di Openmoko nel centro della parte bassa dello schermo, assieme al simbolo di ''bloccato'' e ''sbloccato''. Se si trascina il simbolo di Openmoko fino alla cima dello schermo, verso il simbolo di ''sbloccato'', si sbloccherà lo schermo.
 
