--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -85,7 +85,9 @@ Premendo per un secondo il bottone Aux apparirà un menù che vi permetterà di:
 * Screenshot: parte un'applicazione che permette di catturare e salvare un'immagine del contenuto dello schermo
 
 === Password ===
-
+L'utente root di default non ha password. La prima cosa che si potrebbe voler fare potrebbe essere di metterne una. Per far ciò è sufficiente digitare nel terminale:
+ # passwd
+La password sarà inserita, in forma criptata, nel file <tt>/etc/passwd</tt>.
 
 === Sbloccare lo Schermo ===
 Quando lo schermo è bloccato, vedrai una grafica verde in stile Matrix con il simbolo di Openmoko nel centro della parte bassa dello schermo, assieme al simbolo di ''bloccato'' e ''sbloccato''. Se si trascina il simbolo di Openmoko fino alla cima dello schermo, verso il simbolo di ''sbloccato'', si sbloccherà lo schermo.
