--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -89,6 +89,8 @@ L'utente root di default non ha password. La prima cosa che si potrebbe voler fa
  # passwd
 La password sarà inserita, in forma criptata, nel file <tt>/etc/passwd</tt>.
 
+
+=== Dare un nome al neonato ===
 === Sbloccare lo Schermo ===
 Quando lo schermo è bloccato, vedrai una grafica verde in stile Matrix con il simbolo di Openmoko nel centro della parte bassa dello schermo, assieme al simbolo di ''bloccato'' e ''sbloccato''. Se si trascina il simbolo di Openmoko fino alla cima dello schermo, verso il simbolo di ''sbloccato'', si sbloccherà lo schermo.
 
