/* Dare un nome al neonato */

--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -91,6 +91,9 @@ La password sarà inserita, in forma criptata, nel file <tt>/etc/passwd</tt>.
 
 
 === Dare un nome al neonato ===
+Se l'hostname <tt>om-gta02</tt> non ci soddisfa, lo possiamo cambiare con
+ # hostname <nuovo_nome>
+
 === Sbloccare lo Schermo ===
 Quando lo schermo è bloccato, vedrai una grafica verde in stile Matrix con il simbolo di Openmoko nel centro della parte bassa dello schermo, assieme al simbolo di ''bloccato'' e ''sbloccato''. Se si trascina il simbolo di Openmoko fino alla cima dello schermo, verso il simbolo di ''sbloccato'', si sbloccherà lo schermo.
 
