--- a/Applications.mw
+++ b/Applications.mw
@@ -5,7 +5,7 @@ This is what is intended to be eventually released on the stock firmware of Open
 
 Community applications may be found on the [[Wish_List|Wish List]] and on [http://projects.openmoko.org projects.openmoko.org]
 
-Although [[Openmoko]] is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
+Although Openmoko is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
 
 == Applications ==
 === Based on Software Stack ===
