--- a/Automatic_emulation_in_Ubuntu%2Fru.mw
+++ b/Automatic_emulation_in_Ubuntu%2Fru.mw
@@ -1,5 +1,5 @@
 {{Languages|Automatic emulation in Ubuntu}}
-[[Image:Qemu-ubuntu1.png|thumb|эмуляция [[Openmoko]] запущенная на Ubuntu]]
+[[Image:Qemu-ubuntu1.png|thumb|эмуляция Openmoko запущенная на Ubuntu]]
 
 Это инструкция по установке эмулятора на Ubuntu Linux. Для других систем смотрите [[Installation guide]]
 
