Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Automatic_emulation_in_Ubuntu%2Fzh_cn.mw
+++ b/Automatic_emulation_in_Ubuntu%2Fzh_cn.mw
@@ -1,4 +1,4 @@
-[[Image:Qemu-ubuntu1.png|thumb|emulation of [[Openmoko]] running on Ubuntu]]
+[[Image:Qemu-ubuntu1.png|thumb|emulation of Openmoko running on Ubuntu]]
 
 This is a tutorial for getting an emulation environment on an Ubuntu system. For other systems see the [[Installation guide]]
 
