Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/D-Bus.mw
+++ b/D-Bus.mw
@@ -1,4 +1,4 @@
-[[Openmoko]] uses '''D-Bus''', a message bus system which provides a simple way for applications to talk to one another and to be available as services in the system. If the application providing the service is not running when a message is sent, the application will be started.
+Openmoko uses '''D-Bus''', a message bus system which provides a simple way for applications to talk to one another and to be available as services in the system. If the application providing the service is not running when a message is sent, the application will be started.
 
 There are two separate busses:
 *a system bus for root which runs whenever the phone is on
