Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Community_Resources%2Fzh_tw.mw
+++ b/Community_Resources%2Fzh_tw.mw
@@ -162,7 +162,7 @@ Subversion (svn) 樹狀目錄如下：
 
 === Monotone Server ===
 
-正式的 [[OpenEmbedded]] 儲存伺服器用來建立[[Openmoko]] 套件，你可以在<tt>monotone.openmoko.org</tt>上找到。請注意它只是一個monotone server，並沒有web介面。請參考[[MonotoneServer]]取得更多資訊。
+正式的 [[OpenEmbedded]] 儲存伺服器用來建立Openmoko 套件，你可以在<tt>monotone.openmoko.org</tt>上找到。請注意它只是一個monotone server，並沒有web介面。請參考[[MonotoneServer]]取得更多資訊。
 
 === 專案 ===
 
