Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/External_Feeds.mw
+++ b/External_Feeds.mw
@@ -1,4 +1,4 @@
-There are a number of blogs written by people in the [[Openmoko]] community that are not part of the official feed, however can be accessed individually with the URLs below:
+There are a number of blogs written by people in the Openmoko community that are not part of the official feed, however can be accessed individually with the URLs below:
 
 {| border="1"
 ! Blog Name !! Author !! Description !! Feed
