Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/External_Feeds%2Fit.mw
+++ b/External_Feeds%2Fit.mw
@@ -1,4 +1,4 @@
-Ci sono molti blog scritti nella Comunità di [[Openmoko]] che non sono parte del sistema di informazione ufficiale, accessibili individualmente tramite i collegamenti riportati nella tabella sotto:
+Ci sono molti blog scritti nella Comunità di Openmoko che non sono parte del sistema di informazione ufficiale, accessibili individualmente tramite i collegamenti riportati nella tabella sotto:
 
 {| border="1"
 ! Nome del Blog !! Autore !! Descrizione !! Feed RSS
