--- a/FAQ.mw
+++ b/FAQ.mw
@@ -108,7 +108,7 @@ For FreeRunner
 
 === Q: What are the benefits of an "open" phone over a "closed" phone ===
 
-A: In a conventional closed phone, the handset maker and the mobile network operator work together to provide a service to you that best suits their business model.    The capabilities of a modern smartphone equipped with GPS, Wifi and bluetooth are amazing and the result is that many features are "locked down" because they do not suit the network operator.    Up until now it has been difficult to buy a phone on which you have freedom to install sofware which is not controlled by the network operators - [[Openmoko]] changes that!
+A: In a conventional closed phone, the handset maker and the mobile network operator work together to provide a service to you that best suits their business model.    The capabilities of a modern smartphone equipped with GPS, Wifi and bluetooth are amazing and the result is that many features are "locked down" because they do not suit the network operator.    Up until now it has been difficult to buy a phone on which you have freedom to install sofware which is not controlled by the network operators - Openmoko changes that!
 
 A: A list of examples of "closed" behaviour has been started here - [[Problems of typical "closed" phones]]
 
@@ -128,7 +128,7 @@ It is possible to make and receive calls in some software revisions, this freque
 
 === Q: Is there description and list of Openmoko software? ===
 
-A: See [[Openmoko]] and [[OpenmokoFramework]]
+A: See Openmoko and [[OpenmokoFramework]]
 
 === Q: Is it completely free software/open source? ===
 
