Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/FAQ%2Fde.mw
+++ b/FAQ%2Fde.mw
@@ -1,7 +1,7 @@
 == Einleitung == 
 
 === Q: Was ist Openmoko? Was sind Neo 1973 und Neo FreeRunner? ===
-A: [[Openmoko]] ist eine Software Plattform - Der Versuch eine vollst&auml;ndig offene Softwaresuite f&uuml;r Handys zu erschaffen. 
+A: Openmoko ist eine Software Plattform - Der Versuch eine vollst&auml;ndig offene Softwaresuite f&uuml;r Handys zu erschaffen. 
 * Das [[FIC]] [[Neo 1973]] ist das erste Telefon, das Openmoko unterstützt. Es ist primär für Softwareentwickler gedacht.
 * Das FIC [[Neo FreeRunner]] ist eine geplante verbesserte Version des Neo 1973. 
 
@@ -72,7 +72,7 @@ Idealerweise zus&auml;tzlich:
 
 === Q: Gibt es eine Beschreibung und Liste der Software (Openmoko)? ===
 
-A: Siehe [[Openmoko]]
+A: Siehe Openmoko
 
 === Q: Wie kann ich mit Openmoko Software installieren und verwalten? ===
 
