Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/FAQ%2Ffr.mw
+++ b/FAQ%2Ffr.mw
@@ -76,7 +76,7 @@ Il est possible de téléphoner et de recevoir des appels.
 
 === Q: Est-ce qu'une liste et une description des logiciels Openmoko est disponible? ===
 
-R: Voir [[Openmoko]] et [[OpenmokoFramework]]
+R: Voir Openmoko et [[OpenmokoFramework]]
 
 === Q: Est-ce que c'est totalement opensource/composé de logiciels libres? ===
 
