Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/FAQ%2Fit.mw
+++ b/FAQ%2Fit.mw
@@ -3,7 +3,7 @@ Domande e Risposte che sembrano non trovarsi in nessuna categoria.
 == Introduzione == 
 
 === Q: Cos'è Openmoko e Neo1973? ===
-A: [[Openmoko]] è una piattaforma software, un tentativo di creare il primo stack software per cellulari totalmente aperti del mondo. Il [[FIC]] [[Neo1973]] è il primo telefono Openmoko completamente supportato.
+A: Openmoko è una piattaforma software, un tentativo di creare il primo stack software per cellulari totalmente aperti del mondo. Il [[FIC]] [[Neo1973]] è il primo telefono Openmoko completamente supportato.
 
 === Q: Dove posso comprare un [[Neo1973]]? ===
 
