Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/FAQ%2Fru.mw
+++ b/FAQ%2Fru.mw
@@ -3,7 +3,7 @@
 ==Вступление== 
 
 === Q: Что такое Openmoko и Neo1973? ===
-A: [[Openmoko]] это программная платформа, попытка создать первую в мире полностью открытую программную платформу для мобильных телефонов. [[Neo1973/ru|Neo1973]] от [[FIC]] это первый телефон полностью поддерживающий Openmoko.
+A: Openmoko это программная платформа, попытка создать первую в мире полностью открытую программную платформу для мобильных телефонов. [[Neo1973/ru|Neo1973]] от [[FIC]] это первый телефон полностью поддерживающий Openmoko.
 
 === Q: Я эксперт в ____ , могу я присоединится к Openmoko? ===
 
