Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/FAQ%2Fzh_cn.mw
+++ b/FAQ%2Fzh_cn.mw
@@ -4,7 +4,7 @@ Questions and Answers that don't seem to fit elsewhere
 
 === 问: Openmoko和Neo1973是什么? ===
 
-答: [[Openmoko]] 是一个软件开发平台，尝试建立世界上第一个完全开放的智能手机软件开发平台。[[FIC]] [[Neo1973]] 是第一个完全支持Openmoko的手机.
+答: Openmoko 是一个软件开发平台，尝试建立世界上第一个完全开放的智能手机软件开发平台。[[FIC]] [[Neo1973]] 是第一个完全支持Openmoko的手机.
 
 === 问: 我什么时候可以买到一部Neo1973? ===
 
@@ -67,7 +67,7 @@ Ideally they also:
 
 === Q: 有 Openmoko 软件的描述和列表吗？ ===
 
-A: 见 [[Openmoko]]
+A: 见 Openmoko
 
 === Q: 我怎么在OPENMOKO平台上安装和管理软件？ ===
 
