--- a/GTA01:Neo_1973.mw
+++ b/GTA01:Neo_1973.mw
@@ -1,7 +1,7 @@
 {{Neo1973}}
 
-The '''Neo 1973''' (internal codename [[GTA01 revisions|GTA01]]) is the first phone designed to run [[Openmoko]].
-It is a phone that can be used with any [[GSM]] operator, and it is manufactured by [[FIC]] who instigated the [[Openmoko]] project.
+The '''Neo 1973''' (internal codename [[GTA01 revisions|GTA01]]) is the first phone designed to run Openmoko.
+It is a phone that can be used with any [[GSM]] operator, and it is manufactured by [[FIC]] who instigated the Openmoko project.
 This pages contains all GTA01 related topic of wiki. Press the following links, you can easily find the page you want.
 
 Note that the Neo 1973 can not currently run the OM 2008.8 software (the latest release). Currently the developers are working on a major infrastructure change (debian style package management) which will enable them to port Om 2008.8 to GTA01. 
